data/derived/comb/progs/unify/prog5011.ml.out
Characters 44-51:
  let rec clone x n = if n = 1 then []@x else clone x::[x] n-1;;
                                              ^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a list
